backend/speed-test-output.txt
C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
speed-test-questions.ts(61,39): error TS2339: Property 'query' does not exist on type 'RAGService'.

    at createTSError (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Pedro\Desktop\webapp\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339 ]
}
